<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="berita_terkini_mengenai_kesehatan">Berita terkini mengenai kesehatan</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="riwayat_scan">Riwayat Scan</string>
    <string name="image_scroll">Ini image yang dipilih</string>
    <string name="error_message">Terjadi kesalahan saat memuat data</string>
    <string name="swipe_down_message">Usap ke bawah untuk memuat ulang</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ut pretium ipsum. Proin interdum leo ante, pulvinar ultricies purus vehicula non. Nulla auctor lorem vel sapien luctus, quis dapibus mauris iaculis. Cras arcu urna, pulvinar eleifend leo malesuada, suscipit varius orci. Maecenas ullamcorper erat euismod sem euismod ultrices. Aliquam sed.</string>
    <string name="simpan">Simpan</string>
    <string name="tidak_ada_berita_terkini">Tidak ada berita terkini</string>
    <string name="tidak_ada_riwayat_scan_yang_disimpan">Tidak ada riwayat scan yang disimpan</string>
    <string name="_0_persen">0%</string>
    <string name="cancer">Cancer</string>
    <string name="delete_scan_history">Delete scan history</string>
    <string name="label_score_percent">%1$s %2$d%%</string>
    <string name="score_percent">%1$d%%</string>
    <string name="cancer_guide">Hasil deteksi menunjukkan bahwa Anda mungkin memiliki indikasi kanker kulit, penting untuk segera berkonsultasi dengan dokter kulit atau ahli kesehatan untuk evaluasi lebih lanjut. Meskipun deteksi ini bukan diagnosis definitif, memeriksakan diri dengan profesional medis dapat memberikan informasi yang lebih akurat dan rencana pengobatan yang sesuai.\n\nSegera tindak lanjuti hasil deteksi ini dengan langkah-langkah yang tepat untuk menangani kondisi Anda. Jangan tunda untuk mencari bantuan medis, karena deteksi dini dan pengobatan yang tepat dapat meningkatkan peluang kesembuhan. Selain itu, jangan ragu untuk berbicara dengan dokter Anda tentang kekhawatiran atau pertanyaan yang Anda miliki. Ahli kesehatan akan membantu Anda dan memberikan dukungan selama proses pengobatan.</string>
    <string name="non_cancer_guide">Hasil analisis menunjukkan bahwa Anda tidak terindikasi memiliki kanker kulit, ini bisa menjadi kabar baik. Namun, penting untuk tetap menjaga kesehatan kulit Anda dengan melakukan pemeriksaan rutin sendiri dan menghindari paparan berlebihan terhadap sinar matahari serta mengenakan perlindungan yang tepat ketika berada di bawah sinar matahari. Jaga pola hidup sehat dan berkonsultasi dengan dokter kulit jika Anda memiliki kekhawatiran atau perubahan kulit yang mencurigakan.</string>
    <string name="pilihlah_gambar_dari_galeri_terlebih_dahulu">Pilihlah gambar dari galeri terlebih dahulu</string>
    <string name="reset">Reset</string>
    <string name="preview_gambar">Preview gambar</string>
</resources>