<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/asclepius_round_icon_with_bg"
        app:menu="@menu/main_menu"
        app:title="Asclepius"
        app:titleMarginStart="32dp"
        app:titleTextAppearance="@style/MenuTitle"
        app:titleTextColor="@color/asclepius_bg_light" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_scroll"
        app:layout_constraintBottom_toTopOf="@+id/galleryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/preview_gambar"
                android:scaleType="fitCenter"
                android:src="@drawable/skin_cancer_placeholder"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                app:srcCompat="@drawable/skin_cancer_placeholder" />

            <TextView
                android:id="@+id/tvEmpty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pilihlah_gambar_dari_galeri_terlebih_dahulu"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/reset"
                android:visibility="gone"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/gallery"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/analyzeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/analyzeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/analyze"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>