<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/asclepius_blue"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="none"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/lorem_ipsum"
            android:textAlignment="viewEnd"
            android:textColor="@color/asclepius_bg_light"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivScan"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_persen"
            android:textAlignment="center"
            android:textColor="@color/asclepius_bg_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/indicator"
            app:layout_constraintEnd_toEndOf="@+id/indicator"
            app:layout_constraintStart_toStartOf="@+id/indicator"
            app:layout_constraintTop_toTopOf="@+id/indicator" />

        <ProgressBar
            android:id="@+id/indicator"
            style="@style/CircularDeterminateProgressBar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="4dp"
            android:indeterminateOnly="false"
            android:progress="60"
            android:progressDrawable="@drawable/progress_circle_non_cancer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivScan"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="60" />

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancer"
            android:textColor="@color/asclepius_bg_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvScore"
            app:layout_constraintStart_toEndOf="@+id/indicator"
            app:layout_constraintTop_toTopOf="@+id/tvScore" />

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="true"
            android:background="@drawable/delete_shape"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/delete_scan_history"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/baseline_delete_forever_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>